--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
         <div class="container pt-3 pb-2">
             <div class="row">
                 <div class="col-md-8 foot-bottom-text">
-                    <p>Privacy Policy / This web was coded by <a href="whatsapp://send?text=Hello World!&phone=+923139552212" class="whatsapp">A Baryal</a> © 2024 
+                    <p>Privacy Policy / This web was coded by <a href="whatsapp://send?text=Hello World!&phone=+923139552212" class="whatsapp">Sajid Wazir</a> © 2024 
                         / All Rights Reserved</p>
                 </div>
                 <div class="col-md-4 social-links content-right">
