--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   <a class="nav-link" href="#services">Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#projects">Projects</a>
+                  <a class="nav-link" href="#projects">courses</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#testimonials">Testimonials</a>
